# mica

./: .codecov.yml  .denylist  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  I18N_AUDIT_REPORT.md  LICENSE  NOTICE  README.md  codecov.yml  design.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
.sisyphus/: handoff-v1.14.1.md  handoff-v1.19.0.md  handoff-v1.20.0.md  handoff-v1.21.0.md
backend/: .dockerignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/app/: config.py  main.py  scheduler.py  scheduler_main.py
backend/app/api/: __init__.py
backend/app/api/v1/: activity_logs.py  admin.py  ai.py  approval.py  approval_delegations.py  approval_rules.py  auth.py  authz.py  classification.py  contracts.py  dashboard.py  delivery_plans.py  document_templates.py  documents.py  feishu_webhook.py  flow.py  import_excel.py  insights.py  master_data.py  notifications.py  payment_schedule.py  purchase.py  recycle_bin.py  rfq.py  saml.py  search.py  sku.py  supplier_portal.py  system_params_admin.py  websocket.py
backend/app/core/: authz.py  cerbos_client.py  crypto.py  field_authz.py  litellm_helpers.py  money.py  scoping.py  security.py
backend/app/db/: __init__.py
backend/app/i18n/: __init__.py
backend/app/i18n/messages/: en-US.json  zh-CN.json
backend/app/middleware/: perf_monitor.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: ai.py  approval.py  approval_reminder.py  classification.py  contract_extract.py  contracts.py  daily_digest.py  delivery_plans.py  document_templates.py  documents.py  email_service.py  exchange_rate.py  export_excel.py  export_pdf.py  flow.py  invoice_extract.py  master_data.py  notifications.py  payment_schedule.py  purchase.py  rfq.py  saml_config.py  saml_jit.py  saml_metadata_refresh.py  search.py  seed.py  sku.py  sku_insights.py  sla_escalation.py  system_params.py  weekly_insights.py
backend/app/services/feishu/: __init__.py  approval.py  client.py  messages.py  webhooks.py
backend/cerbos-policies/: purchase_order.yaml  purchase_requisition.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_notifications.py  0003_system_parameters.py  0004_fts_trigram.py  0005_approval_rules_dsl.py  0006_schema_additions.py  0007_payment_schedules.py  0008_classification_tables.py  0009_enrich_seed_data.py  0010_backfill_item_categories.py  0011_requester_role.py  0012_rfq_tables.py  0013_saml_system_params.py  0014_contract_versions.py  0015_split_is_active.py  0016_shipment_documents.py  0017_saml_metadata_url.py  0018_payment_schedules_po_or_contract.py  0019_supplier_payee_fields.py  0020_backfill_amount_paid.py  0021_payment_records_contract_id.py  0022_autolink_orphan_payments.py  0023_po_contract_links.py  0024_document_templates.py  0025_ai_feature_routing_document_generation.py  0026_contract_number_prefix_param.py  0027_shipment_contract_fk.py  0028_user_cost_centers_departments_m2m.py  0029_bill_number_prefix_param.py  0030_contract_version_change_summary.py  0031_feishu_params.py  0032_feishu_user_id.py  0033_delivery_plans.py  0034_feishu_union_id.py  0035_email_params.py  0036_cost_center_budgets.py  0037_approval_sla_params.py  0038_approval_reminder_and_currency.py  0038_supplier_access_token.py  0039_supplier_access_token.py  (+15 more)
backend/tests/: conftest.py  test_api_contract.py  test_saml_api.py  test_walking_skeleton.py
backend/tests/integration/: test_api_flows.py  test_extended_flows.py  test_role_denials.py
backend/tests/unit/: test_admin_user_delete.py  test_admin_user_schemas.py  test_api_contracts.py  test_approval.py  test_cerbos_client.py  test_classification.py  test_content_disposition.py  test_contracts.py  test_daily_digest.py  test_delivery_plans.py  test_document_templates.py  test_documents.py  test_export_excel.py  test_export_pdf.py  test_feishu_messages.py  test_feishu_webhook.py  test_flow.py  test_insights.py  test_invoice_extract.py  test_litellm_helpers.py  test_master_data.py  test_notifications.py  test_payment_schedule.py  test_purchase.py  test_request_id_middleware.py  test_rfq.py  test_saml.py  test_scheduled_tasks.py  test_search.py  test_sku.py  test_sku_insights.py  test_system_params.py
deploy/: .env.example  cerbos-config.yaml  docker-compose.yml
deploy/backups/: .gitkeep
deploy/cerbos-policies/: invoice.yaml  payment_record.yaml  purchase_order.yaml  purchase_requisition.yaml
deploy/nginx/conf.d/: mica-tls.conf.template  mica.conf.default
deploy/scripts/: README.md  _lib.sh  backup.sh  dev-down.sh  dev-up.sh  disable-tls.sh  enable-tls.sh  health.sh  logs.sh  restore.sh  upgrade.sh
docs/: DESIGN.md  DEVELOPMENT.md  QUICKSTART.md
docs/adr/: 0001-technology-stack.md  0002-search-pg-trgm-over-zhparser.md  0003-system-parameters.md
docs/user-manual/: 00-introduction.md  01-roles-and-permissions.md  02-global-workflow.md  03-per-role-workflow.md  04-features.md  05-faq.md  README.md  _diagrams.md  admin-guide.md
docs/user-manual/admin/: 00-overview.md  01-deployment-and-ops.md  02-https-and-tls.md  (+6 more)
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/tests/: admin.spec.ts  dashboard.spec.ts  login.spec.ts  navigation.spec.ts  po-flow.spec.ts  pr-flow.spec.ts  search.spec.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  vite-env.d.ts
video/: index.html
(+168 files in other folders)
